--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +53,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-input-mask": "^3.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
 }
